kube-asset-examples/challange-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-cert-manager
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /.well-known
        backend:
          serviceName: kube-cert-manager
          servicePort: 5002
